--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node modules
 node_modules
+backend/node_modules
+frontend/node_modules
+
+# Build output
 dist
 dist-ssr
+frontend/dist
+
 *.local
 
 # Editor directories and files
