--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
+    "express-validator": "^7.2.1",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
