--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# MONGODB_URI=mongodb://localhost:27017/your-database-name
+# ONGODB_URIM=mongodb://localhost:27017/your-database-name
 # PORT=3000
 # SECRET=mbdmbd
